fix(tl-card): add missing gap on actions

--- a/packages/core/src/tegel-light/components/tl-card/tl-card.scss
+++ b/packages/core/src/tegel-light/components/tl-card/tl-card.scss
@@ -154,6 +154,7 @@
   align-items: flex-end;
   flex: 1 0 0;
   align-self: stretch;
+  gap: 16px;
 }
 
 .tl-card__stretch {
